--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,5 +20,5 @@ main:
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: Curriculum Vitae
-    url: https://juhyunbae.com/Bae_CV.pdf
+    url: https://juhyunbae.netlify.app/Bae_CV.pdf
     weight: 70
