--- a/data/themes/custom1.toml
+++ b/data/themes/custom1.toml
@@ -5,21 +5,21 @@ name = "custom1"
 light = true
 
 # Primary
-primary = "#0B2161"
+primary = "#F6EE4A"
 
 # Menu
-menu_primary = "#E0ECF8"
-menu_text = "#0B2161"
-menu_text_active = "#045FB4"
-menu_title = "#0B2161"
+menu_primary = "#F9EF2D"
+menu_text = "#E5DE55"
+menu_text_active = "#F2A227"
+menu_title = "#F49A10"
 
 # Home sections
-home_section_odd = "#EFF5FB"
-home_section_even = "#E0ECF8"
+home_section_odd = "#F4EA10"
+home_section_even = "#F1E81C"
 
 # links
-link = "#2980B9"
-link_hover = "#87bfe4"
+link = "#F1B01C"
+link_hover = "#F1B01C"
 
 [dark]
   link = "#bbdefb"
